--- a/SwiftStock(Redo)/SwiftStock(Redo).csproj
+++ b/SwiftStock(Redo)/SwiftStock(Redo).csproj
@@ -17,6 +17,7 @@
 	</Target>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.3">
         <PrivateAssets>all</PrivateAssets>
