Account setting (somewhat working)

--- a/SwiftStock(Redo)/SwiftStock(Redo).csproj
+++ b/SwiftStock(Redo)/SwiftStock(Redo).csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>SwiftStock_Redo_</RootNamespace>
+    <RootNamespace>SwiftStock</RootNamespace>
   </PropertyGroup>
 
 	<ItemGroup>
